--- a/package.json
+++ b/package.json
@@ -2,20 +2,34 @@
   "name": "food-helper-view",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vadikefimenko.github.io/food-helper-view",
+  "proxy": "http://localhost:3002",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^20.8.9",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
+    "body-parser": "^1.20.2",
+    "classnames": "^2.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0",
+    "mongoose": "^7.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.0"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "dev": "PORT=3001 react-scripts start",
+    "start:back": "node backend/index.js",
+    "start:app": "npm run build && npm run start:back",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
