--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "jsx": "react",
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es5",
+    "target": "ESNext",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["vite/client", "vite-plugin-svgr/client"],
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": false,
