--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "react": "^18.2.0",
@@ -33,8 +34,6 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start:back": "node backend/index.js",
-    "start:app": "npm run build && npm run start:back",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
