правка зависимостей, pm2 конфиг и docker compose
проверка запуска внутри pm2 вместе с проектом bot

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@
 
 # production
 /build
+/dist
+/admin/dist/
+/admin/node_modules/
+/bot/dist/
+/bot/node_modules/
+/sessions.json
 
 # misc
 .DS_Store
