--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "classnames": "^2.3.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "react": "^18.2.0",
