--- a/bot/.env
+++ b/bot/.env
@@ -1,2 +1,3 @@
 TOKEN=6599583368:AAFDJkBDrq695lsJTXgSDBeQ-w3WtV_07LQ
+DEV_TOKEN=7061483296:AAFAousQVspW-fGzqCjfPeO1Wn0j_dG3dkg
 MONGODB=mongodb+srv://foodHelper:$n7uFJ3d@cluster0.bn1ofkw.mongodb.net/?retryWrites=true&w=majority
